removed add functionality from editButtonItem and created leftBarButton called "Add"

--- a/fishList/Base.lproj/Main.storyboard
+++ b/fishList/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AAy-hy-R20">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="en2-Bj-IPq" style="IBUITableViewCellStyleDefault" id="bzA-PL-enL">
@@ -57,7 +57,9 @@
                             <constraint firstItem="AAy-hy-R20" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="w2B-a6-aQ4"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Fish List" id="ud6-ko-f3k"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="AAy-hy-R20" id="nce-5Q-gRb"/>
                     </connections>
